View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025705 | Community | OCCT:Modeling Algorithms | public | 2015-01-13 21:29 | 2015-05-14 16:28 |
Reporter | shoogen | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025705: BRepOffsetAPI_MakeOffset regression in 0025298 | ||||
Description | If BRepOffsetAPI_MakeOffset is used without an init it creates an open offset wire with the intersection method instead of a closed offset with the arc method. So the behavior silently changed. I don't need this to be fixed. This ticket is only for informational purpose. | ||||
Steps To Reproduce | BRepOffsetAPI_MakeOffset mkOffset; //mkOffset.Init(GeomAbs_Arc); mkOffset.AddWire(some_closed_wire); mkOffset.Perform(distance); No need to add any new case into test grid. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Might be a duplicate of 25704 |
|
Branch CR25705 has been created by jgv. SHA-1: c682d6fd309e80b3284a615b46ee08c5770c7c47 Detailed log of new commits: Author: jgv Date: Fri Apr 17 15:30:05 2015 +0300 0025705: BRepOffsetAPI_MakeOffset regression in 0025298 |
|
Please review the branch CR25705. |
|
Reviewed. |
|
Branch CR25705 has been updated forcibly by mkv. SHA-1: 69f4fe0d9a7787cadc3034c0d776bda724e95f69 |
|
Dear BugMaster, Branch CR25705 was rebased on current master of occt git-repository. |
|
Dear BugMaster, Branch CR25705 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: 69f4fe0d9a7787cadc3034c0d776bda724e95f69 Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 4 (4 on master) Windows: 0 (0 on master) Regressions/Differences: No regressions/differences Testing cases: Not needed Testing on Linux: occt component : Total MEMORY difference: 95158648 / 94501428 [+0.70%] Total CPU difference: 52846.75999999937 / 52229.27999999946 [+1.18%] products component : Total MEMORY difference: 23714481 / 23685903 [+0.12%] Total CPU difference: 18003.569999999967 / 17782.939999999973 [+1.24%] Testing on Windows: occt component : Total MEMORY difference: 57152345 / 57163988 [-0.02%] Total CPU difference: 16082.579892799073 / 16283.181578699077 [-1.23%] products component : Total MEMORY difference: 15560450 / 15564896 [-0.03%] Total CPU difference: 6408.20907799999 / 6585.207812599981 [-2.69%] There are no differences in images found by testdiff. |
|
Branch CR25705 has been deleted by inv. SHA-1: 69f4fe0d9a7787cadc3034c0d776bda724e95f69 |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-01-13 21:29 | shoogen | New Issue | |
2015-01-13 21:29 | shoogen | Assigned To | => msv |
2015-01-13 21:36 | shoogen | Note Added: 0036021 | |
2015-01-13 21:38 | shoogen | Note Edited: 0036021 | |
2015-01-14 11:19 | msv | Assigned To | msv => jgv |
2015-01-14 11:19 | msv | Status | new => assigned |
2015-01-16 08:39 | abv | Target Version | => 6.9.0 |
2015-04-17 15:30 | git | Note Added: 0039960 | |
2015-04-17 15:32 | jgv | Note Added: 0039963 | |
2015-04-17 15:32 | jgv | Assigned To | jgv => msv |
2015-04-17 15:32 | jgv | Status | assigned => resolved |
2015-04-17 15:32 | jgv | Steps to Reproduce Updated | |
2015-04-17 18:33 | msv | Note Added: 0039993 | |
2015-04-17 18:33 | msv | Assigned To | msv => bugmaster |
2015-04-17 18:33 | msv | Status | resolved => reviewed |
2015-04-17 19:11 | git | Note Added: 0040003 | |
2015-04-17 19:11 |
|
Assigned To | bugmaster => mkv |
2015-04-22 18:41 |
|
Note Added: 0040127 | |
2015-04-22 18:41 |
|
Note Added: 0040128 | |
2015-04-22 18:41 |
|
Assigned To | mkv => bugmaster |
2015-04-22 18:41 |
|
Status | reviewed => tested |
2015-04-22 18:41 |
|
Test case number | => Not needed |
2015-04-25 17:37 | bugmaster | Changeset attached | => occt master 75d1222c |
2015-04-25 17:37 | bugmaster | Status | tested => verified |
2015-04-25 17:37 | bugmaster | Resolution | open => fixed |
2015-05-14 15:28 |
|
Status | verified => closed |
2015-05-14 15:30 |
|
Fixed in Version | => 6.9.0 |
2015-05-14 16:28 | git | Note Added: 0040985 |