0025705: BRepOffsetAPI_MakeOffset regression in 0025298